introducing jquery and chart.js

--- a/src/JoyOI.Monitor/JoyOI.Monitor.csproj
+++ b/src/JoyOI.Monitor/JoyOI.Monitor.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <Folder Include="Views\Account\" />
+    <Folder Include="wwwroot\scripts\external\" />
   </ItemGroup>
 
   <ItemGroup>
