--- a/src/JoyOI.Monitor/JoyOI.Monitor.csproj
+++ b/src/JoyOI.Monitor/JoyOI.Monitor.csproj
@@ -12,6 +12,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.3" />
     <PackageReference Include="JoyOI.UserCenter.SDK" Version="1.0.0-alpha-10073" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.0.0" />
     <PackageReference Include="Pomelo.AspNetCore.Extensions" Version="2.0.0-*" />
     <PackageReference Include="MySqlConnector" Version="0.*" />
   </ItemGroup>
