config example file

--- a/src/JoyOI.Monitor/JoyOI.Monitor.csproj
+++ b/src/JoyOI.Monitor/JoyOI.Monitor.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Include="config.json.example" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Folder Include="Views\Account\" />
     <Folder Include="wwwroot\scripts\external\" />
   </ItemGroup>
