--- a/src/JoyOI.Monitor/JoyOI.Monitor.csproj
+++ b/src/JoyOI.Monitor/JoyOI.Monitor.csproj
@@ -9,6 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Controllers\Contest\" />
     <Folder Include="Views\Account\" />
   </ItemGroup>
 
